# outlook-desktop-mcp

./: .gitignore  README.md  outlook-desktop-mcp.cmd  pyproject.toml
.github/workflows/: publish.yml
src/outlook_desktop_mcp/: __main__.py  com_bridge.py  server.py  server_mac.py
src/outlook_desktop_mcp/tools/: _folder_constants.py
src/outlook_desktop_mcp/utils/: errors.py  formatting.py
tests/: calendar_com_test.py  calendar_mcp_test.py  extras_com_test.py  extras_mcp_test.py  phase1_com_test.py  phase3_mcp_test.py
