[project]
name = "outlook-desktop-mcp"
version = "0.1.1"
description = "Run this on Windows and get Outlook Desktop as an MCP server. No Graph API, no Entra app registration — just your local Outlook."
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Andreas Martin Aanerud", email = "aaanerud@microsoft.com" },
]
keywords = ["mcp", "outlook", "email", "com", "automation", "windows", "microsoft", "claude"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Win32 (MS Windows)",
    "Intended Audience :: Developers",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications :: Email",
    "Topic :: Office/Business :: Office Suites",
]
dependencies = [
    "pywin32>=310",
    "mcp[cli]>=1.26.0",
]

[project.urls]
Homepage = "https://github.com/aaanerud/outlook-desktop-mcp"
Repository = "https://github.com/aaanerud/outlook-desktop-mcp"
Issues = "https://github.com/aaanerud/outlook-desktop-mcp/issues"

[project.scripts]
outlook-desktop-mcp = "outlook_desktop_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/outlook_desktop_mcp"]
